// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots IndividualCard Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
      style="max-width: 344px;"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Single Initial 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
      style="max-width: 344px;"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      V
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Voldemort
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="container container--fluid"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      TR
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Tom Marvolo Riddle
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HP
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Harry Potter
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      V
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Voldemort
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HG
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hermione Granger
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      AD
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ambus Dumbledore
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      RW
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ron Weasley
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      SS
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Severus Snape
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
              style="max-width: 344px;"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      H
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hagrid
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Empty 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="v-card__text"
      >
        No individuals found
      </div>
    </div>
  </div>
</div>
`;
